# synaptum-framework

./: .gitignore  README.md  pyproject.toml
examples/: .env.example  01_echo.py  02_llm_tool_agent.py  03_router.py  04_supervisor_worker.py  05_graph.py
examples/messaging/: 01_echo.py  02_llm_tool_agent.py  03_router.py  04_supervisor_worker.py  05_graph.py
examples/patterns/: 06_request_reply.py  07_supervisor_worker_queue.py  08_pipeline.py  09_publish_subscribe.py  10_debate_critique.py  11_router_dispatcher.py  12_blackboard.py  13_graph.py  14_parallel_graph.py  15_map_reduce.py  16_plan_execute.py  17_swarm.py  18_reflection.py  19_consensus.py  20_hitl.py  21_saga.py  prompts.yaml
examples/prompts/: blackboard.yaml  consensus.yaml  debate.yaml  events.yaml  fraud.yaml  graph.yaml  hitl.yaml  loan.yaml  map_reduce.yaml  parallel.yaml  plan_execute.yaml  reflection.yaml  router.yaml  saga.yaml  swarm.yaml  transfer.yaml
src/synaptum/: __init__.py
src/synaptum/agents/: __init__.py  agent_ref.py  composite_agent.py  decision.py  graph_agent.py  llm_agent.py  llm_tool_agent.py  message_agent.py  simple_agent.py
src/synaptum/core/: agent.py  context.py  errors.py  message.py  runtime.py  state.py
src/synaptum/llm/: client.py  llama_client.py
src/synaptum/memory/: base.py  in_memory.py
src/synaptum/messaging/: bus.py  in_memory_bus.py
src/synaptum/patterns/: __init__.py  consensus.py  graph.py  graph_builder.py  hitl.py  map_reduce.py  plan_execute.py  reflection.py  router.py  saga.py  supervisor.py  swarm.py
src/synaptum/prompts/: __init__.py  (+5 more)
(+4 files in other folders)
