[project]
name = "synaptum"
version = "0.1.0"
description = "Minimal Agent Development Framework (bus-driven) above an LLM SDK and below an agent platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synaptum"]
